# BillNova_Backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_m1_initial.py  0002_products.py  0003_billing.py  0004_purchases.py  0005_tenant_settings.py  0006_cr1_products.py  0007_cr2_pricing_invoice_gst.py  0008_cr3_markup_rename.py  0009_cr3_saleitem_unit.py  0010_cr4_default_gst_exclusive.py  0011_cr5_invoice_register.py  0012_cr6_show_branding.py  0013_cr7_per_bill_gst_and_purchase_header.py  0014_access_audit_log.py  0015_gst_billing_workflow.py
app/: __init__.py  main.py
app/api/: auth.py  dashboard.py  health.py  inventory.py  invoices.py  products.py  purchases.py  reports.py  sales.py  settings.py  subscription.py  suppliers.py  users.py
app/core/: config.py  database.py  deps.py  errors.py  gstin.py  permissions.py  security.py
app/models/: __init__.py  audit.py  inventory.py  payment.py  product.py  purchase.py  sale.py  subscription.py  supplier.py  tenant.py  usage.py  user.py
app/repositories/: base.py  product_repo.py  user_repo.py
app/schemas/: auth.py  common.py  inventory.py  product.py  purchase.py  sale.py  settings.py  subscription.py  supplier.py  user.py
app/services/: audit_service.py  auth_service.py  billing_service.py  dashboard_service.py  export_service.py  gst_service.py  inventory_service.py  invoice_service.py  pricing.py  product_service.py  purchase_service.py  report_service.py  settings_service.py  subscription_service.py  supplier_service.py  user_service.py
docs/: 00-README.md  01-FRD.md  02-User-Stories.md  03-Acceptance-Criteria.md  04-Use-Cases.md  05-System-Architecture.md  06-Database-ER-Diagram.md  07-API-Specifications.md  08-Folder-Structure.md  09-Development-Plan.md  10-FRD-ChangeRequest-CR1.md  11-CR1-Database-Changes.md  12-CR1-Tenant-Isolation-Audit.md  13-FRD-ChangeRequest-CR2.md  14-CR2-Database-Changes.md  15-FRD-ChangeRequest-CR3.md  16-CR3-Purchase-Calculation-Flow.md  17-CR3-Database-Review.md  18-CR3-Invoice-Logic-Review.md  19-FRD-ChangeRequest-CR4.md  20-FRD-ChangeRequest-CR5.md  21-FRD-ChangeRequest-CR6.md  22-FRD-ChangeRequest-CR7.md  SECURITY.md
seeds/: seed_plans.py
tests/: conftest.py
tests/api/: test_auth.py  test_billing.py  test_cr1.py  test_cr2_invoice.py  test_cr3_purchase_api.py  test_cr4_pos_pricing.py  test_cr5_invoices.py  test_cr6_thermal_invoice.py  test_cr7_purchase.py  test_dashboard_settings.py  test_gst_billing_workflow.py  test_health.py  test_inventory.py  test_products.py  test_purchases.py  test_rbac_enhancement.py  test_reports.py  test_security.py  test_subscription.py  test_tenant_isolation.py  test_users_rbac.py
tests/integration/: test_e2e_flow.py
tests/unit/: test_cr2_pricing_invariant.py  (+7 more)
