[project]
name = "billnova-backend"
version = "0.1.0"
description = "BillNova — subscription billing/POS SaaS for small Indian retail (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4's bcrypt backend is incompatible with bcrypt >= 4.1 (its
    # self-test raises "password cannot be longer than 72 bytes"). Pin to 4.0.x.
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "reportlab>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24.4",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
omit = ["app/main.py", "alembic/*", "tests/*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 120
target-version = ["py311"]

# Explicit package discovery — the repo has multiple top-level dirs (app, seeds,
# alembic, tests); install only the importable packages so setuptools' flat-layout
# auto-discovery doesn't error.
[tool.setuptools.packages.find]
include = ["app*", "seeds*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
